--- a/Report Demo ML Microplastic data.Rmd
+++ b/Report Demo ML Microplastic data.Rmd
@@ -30,6 +30,7 @@ library(dplyr)
 library(data.table)
 library(Hmisc)
 library(writexl)
+library(tidyr)
 
 # Functions -------------------------------------------------------------------------------------------------------
 # Grouping compounds based on RT1, RT2, and Ion1 - Version 1
@@ -364,27 +365,27 @@ comp_normalized2 <- comp_normalized2 %>%
 
 
 ```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
-p <- "C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Table of product categorization.xlsx"
-
-# Create namedf to use as reference for changing name of file name in Table of product categorization.xlsx
-namedf <- rbind(data.frame(File = unique(comp_normalized1$File), NewFile = unique(comp_normalized1$NewFile)), 
-                data.frame(File = unique(comp_normalized2$File), NewFile = unique(comp_normalized2$NewFile)))
-
-new_excel <- list()
-for (i in 1:length(excel_sheets(path = p))) {
-  # Table of categorization
-  sampinfo <- readxl::read_excel(path = p, 
-                                 sheet = excel_sheets(path = p)[i])
-  
-  newfile <- c()
-  for (row in 1:nrow(sampinfo)) {
-    newfile <- c(newfile, namedf[match(sampinfo[row,]$File, namedf$File),]$NewFile)
-  }
-  sampinfo$NewFile <- newfile
-  new_excel[[paste0("Grouping", i)]] <- sampinfo
-}
-
-writexl::write_xlsx(x = new_excel, path = "Table of product categorization_NewFileName.xlsx")
+# p <- "C:/Users/huyng/OneDrive - Toronto Metropolitan University/Microplastic/Microplastic-Fingerprinting/data/Table of product categorization.xlsx"
+# 
+# # Create namedf to use as reference for changing name of file name in Table of product categorization.xlsx
+# namedf <- rbind(data.frame(File = unique(comp_normalized1$File), NewFile = unique(comp_normalized1$NewFile)), 
+#                 data.frame(File = unique(comp_normalized2$File), NewFile = unique(comp_normalized2$NewFile)))
+# 
+# new_excel <- list()
+# for (i in 1:length(excel_sheets(path = p))) {
+#   # Table of categorization
+#   sampinfo <- readxl::read_excel(path = p, 
+#                                  sheet = excel_sheets(path = p)[i])
+#   
+#   newfile <- c()
+#   for (row in 1:nrow(sampinfo)) {
+#     newfile <- c(newfile, namedf[match(sampinfo[row,]$File, namedf$File),]$NewFile)
+#   }
+#   sampinfo$NewFile <- newfile
+#   new_excel[[paste0("Grouping", i)]] <- sampinfo
+# }
+# 
+# writexl::write_xlsx(x = new_excel, path = "Table of product categorization_NewFileName.xlsx")
 ```
 
 ```{r class.source = 'fold-hide', echo = FALSE, message = FALSE, warning = FALSE}
@@ -928,28 +929,51 @@ one way to overcome this problem is group_by(Suspected_Polymer) or Category or S
 
 ### Wilcoxon test with HCA result
 
-#### WIth Combined GC HPLC
+#### With Combined GC HPLC
+
+Since for HCA, we operate on sample level and for each 4 subdf of each gc_hplc/gc/hplc_list, they all have the same sample column. Therefore, just using one of the subdf is enough.
 
 Here, we want to find what is the optimal cut-off in HCA-cluster-tree 's Height and min_obs, which will result in the maximum number of significant compounds.
 
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
-library(tidyr)
+hc_df <- gc_hplc_list[[1]] %>%
+  dplyr::select(NewFile,
+                collapsed_compound, 
+                Values) %>%
+  # since we have multiple different values of the same compound in some samples, we summarize these values by taking the mean of them
+  dplyr::group_by(
+    NewFile,
+    collapsed_compound) %>%
+  dplyr::summarise(across(Values, base::mean)) %>%
+  tidyr::pivot_wider(names_from =  collapsed_compound,
+                     values_from = Values) %>%
+  tibble::column_to_rownames(., var = "NewFile")
+
+for (r in 1:nrow(hc_df)) {
+  hc_df[r, which(base::is.na(hc_df[r,]))] <- stats::runif(length(which(base::is.na(hc_df[r,]))),
+                                                          min = sort(gc_hplc_list[[1]]$Values)[1],
+                                                          max = sort(gc_hplc_list[[1]]$Values)[2])
+}
+
+hca <- stats::hclust(vegan::vegdist(as.matrix(hc_df),
+                                    method = "robust.aitchison"))
+
 stats <- gc_hplc_list[[1]] %>%
-  select(File, collapsed_compound, Values) %>%
-  group_by(File, collapsed_compound) %>%
-  summarise(mean_value = mean(Values)) %>%
-  pivot_wider(names_from = collapsed_compound, values_from = mean_value)
+      select(NewFile, collapsed_compound, Values) %>%
+      group_by(NewFile, collapsed_compound) %>%
+      summarise(across(Values, mean)) %>%
+      pivot_wider(names_from = collapsed_compound, values_from = Values)
+
 
 # Initialize variables
 sig_comp <- list()
 count <- 1
 
 # Main loop
-for (ele in 91:length(hca$height)) {
-  list_hca <- map(1:7, function(min_obs) {
-    t <- data.frame(group = cutree(hca_samp, h = ceiling(hca_samp$height[ele])))
-    t <- rownames_to_column(t, var = "File")
-    joined <- full_join(t, stats, by = "File")
+for (ele in 1:length(hca$height)) {
+  list_hca <- map(1:10, function(min_obs) {
+    t <- data.frame(group = cutree(hca, h = ceiling(hca$height[ele]))) %>% tibble::rownames_to_column(., var = "NewFile")
+    joined <- full_join(t, stats, by = "NewFile")
     
     g_df <- map_dfr(3:ncol(joined), function(c) {
       satisfied_group <- unique(joined$group[sapply(joined[, c], function(x) sum(!is.na(joined[joined$group == x, c]))) > min_obs])
@@ -974,6 +998,7 @@ for (ele in 91:length(hca$height)) {
   cat(sprintf("The max. number of significant compounds at optimal no. of obs is %d at HCA cut-off Height threshold of %f\n", max_nrow, hca$height[ele]))
   sig_comp[[count]] <- list_hca[[which.max(map_int(list_hca, nrow))]]
   count <- count + 1
+  print(sig_comp[[count]])
 }
 ```
 
@@ -981,17 +1006,17 @@ for (ele in 91:length(hca$height)) {
 
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
 hc_df <- gc_list[[1]] %>%
-  dplyr::select(File,
+  dplyr::select(NewFile,
                 collapsed_compound, 
                 Values) %>%
   # since we have multiple different values of the same compound in some samples, we summarize these values by taking the mean of them
   dplyr::group_by(
-    File,
+    NewFile,
     collapsed_compound) %>%
   dplyr::summarise(across(Values, base::mean)) %>%
   tidyr::pivot_wider(names_from =  collapsed_compound,
                      values_from = Values) %>%
-  tibble::column_to_rownames(., var = "File")
+  tibble::column_to_rownames(., var = "NewFile")
 
 for (r in 1:nrow(hc_df)) {
   hc_df[r, which(base::is.na(hc_df[r,]))] <- stats::runif(length(which(base::is.na(hc_df[r,]))),
@@ -1003,8 +1028,8 @@ hca <- hclust(stats::dist(as.matrix(hc_df),
                          method = "canberra"))
 
 stats <- gc_list[[1]] %>%
-      select(File, collapsed_compound, Values) %>%
-      group_by(File, collapsed_compound) %>%
+      select(NewFile, collapsed_compound, Values) %>%
+      group_by(NewFile, collapsed_compound) %>%
       summarise(across(Values, mean)) %>%
       pivot_wider(names_from = collapsed_compound, values_from = Values)
 
@@ -1015,9 +1040,9 @@ for (ele in 1:length(hca$height)) {
   for (min_obs in 1:8){
     t <- as.data.frame(cutree(hca,  h = ceiling(hca$height[ele])))
     colnames(t) <- "group"
-    t <- t %>% tibble::rownames_to_column(., var = "File")
+    t <- t %>% tibble::rownames_to_column(., var = "NewFile")
     # Joining stats df and HCA-grouping clusters
-    joined <- full_join(t, stats, by = "File")
+    joined <- full_join(t, stats, by = "NewFile")
     g_df <- data.frame(compound=character(), comparison_pair=character(), pval_wilcox_test=integer(), pval_ks_test=integer())
     # Loop through each collapsed_compound (as columns)
     for (c in 3:ncol(joined)) {
@@ -1073,17 +1098,17 @@ for (ele in 1:length(hca$height)) {
 
 ```{r, echo=FALSE, warning = FALSE, message=FALSE}
 hc_df <- hplc_list[[1]] %>%
-  dplyr::select(File,
+  dplyr::select(NewFile,
                 collapsed_compound, 
                 Values) %>%
   # since we have multiple different values of the same compound in some samples, we summarize these values by taking the mean of them
   dplyr::group_by(
-    File,
+    NewFile,
     collapsed_compound) %>%
   dplyr::summarise(across(Values, base::mean)) %>%
   tidyr::pivot_wider(names_from =  collapsed_compound,
                      values_from = Values) %>%
-  tibble::column_to_rownames(., var = "File")
+  tibble::column_to_rownames(., var = "NewFile")
 
 for (r in 1:nrow(hc_df)) {
   hc_df[r, which(base::is.na(hc_df[r,]))] <- stats::runif(length(which(base::is.na(hc_df[r,]))),
@@ -1095,8 +1120,8 @@ hca <- hclust(stats::dist(as.matrix(hc_df),
                          method = "canberra"))
 
 stats <- hplc_list[[1]] %>%
-      select(File, collapsed_compound, Values) %>%
-      group_by(File, collapsed_compound) %>%
+      select(NewFile, collapsed_compound, Values) %>%
+      group_by(NewFile, collapsed_compound) %>%
       summarise(across(Values, mean)) %>%
       pivot_wider(names_from = collapsed_compound, values_from = Values)
 
@@ -1107,9 +1132,9 @@ for (ele in 26:length(hca$height)) { # first 15 heigt results in empty df
   for (min_obs in 1:8){
     t <- as.data.frame(cutree(hca,  h = ceiling(hca$height[ele])))
     colnames(t) <- "group"
-    t <- t %>% tibble::rownames_to_column(., var = "File")
+    t <- t %>% tibble::rownames_to_column(., var = "NewFile")
     # Joining stats df and HCA-grouping clusters
-    joined <- full_join(t, stats, by = "File")
+    joined <- full_join(t, stats, by = "NewFile")
     g_df <- data.frame(compound=character(), comparison_pair=character(), pval_wilcox_test=integer(), pval_ks_test=integer())
     # Loop through each collapsed_compound (as columns)
     for (c in 3:ncol(joined)) {
@@ -1226,20 +1251,27 @@ for (min_obs in 1:10) {
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(adjusted_pvalue_holm)
   
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (nrow(list_suspect_pol[[paste0("Min_obs_", min_obs)]]) == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
   mean_rt <- c()
   mean_mz <- c()
   for (row in 1:nrow(list_suspect_pol[[paste0("Min_obs_", min_obs)]])) {
-    idx <- base::which(gc_hplc_list[[1]]$collapsed_compound == list_suspect_pol[[paste0("Min_obs_", min_obs)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(gc_hplc_list[[1]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(gc_hplc_list[[1]][idx, ]$m.z))
+    idx <- base::which(hplc_list[[1]]$collapsed_compound == list_suspect_pol[[paste0("Min_obs_", min_obs)]][row,]$comp)
+    mean_rt <- c(mean_rt, mean(hplc_list[[1]][idx, ]$RT))
+    mean_mz <- c(mean_mz, mean(hplc_list[[1]][idx, ]$m.z))
   }
   
   list_suspect_pol[[paste0("Min_obs_", min_obs)]]$mean_rt <- mean_rt
   list_suspect_pol[[paste0("Min_obs_", min_obs)]]$mean_mz <- mean_mz
+  }
   
   print(sp_df %>%
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(comp))
+  print(length(unique(list_suspect_pol[[paste0("Min_obs_", min_obs)]]$comp)))
 }
 
 writexl::write_xlsx(x = list_suspect_pol, path = "Wilcoxon_test_COMBINED GC_HPLC_by_Suspected_polymer.xlsx")
@@ -1301,20 +1333,27 @@ for (min_obs in 1:10) {
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(adjusted_pvalue_holm)
    
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (nrow(list_suspect_pol[[paste0("Min_obs_", min_obs)]]) == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
   mean_rt <- c()
   mean_mz <- c()
   for (row in 1:nrow(list_suspect_pol[[paste0("Min_obs_", min_obs)]])) {
-    idx <- base::which(gc_list[[1]]$collapsed_compound == list_suspect_pol[[paste0("Min_obs_", min_obs)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(gc_list[[1]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(gc_list[[1]][idx, ]$m.z))
+    idx <- base::which(hplc_list[[1]]$collapsed_compound == list_suspect_pol[[paste0("Min_obs_", min_obs)]][row,]$comp)
+    mean_rt <- c(mean_rt, mean(hplc_list[[1]][idx, ]$RT))
+    mean_mz <- c(mean_mz, mean(hplc_list[[1]][idx, ]$m.z))
   }
   
   list_suspect_pol[[paste0("Min_obs_", min_obs)]]$mean_rt <- mean_rt
   list_suspect_pol[[paste0("Min_obs_", min_obs)]]$mean_mz <- mean_mz
+  }
   
   print(sp_df %>%
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(comp))
+  print(length(unique(list_suspect_pol[[paste0("Min_obs_", min_obs)]]$comp)))
 }
 
 writexl::write_xlsx(x = list_suspect_pol, path = "Wilcoxon_test_ATDGCMS_by_Suspected_polymer.xlsx")
@@ -1375,6 +1414,11 @@ for (min_obs in 1:10) {
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(adjusted_pvalue_holm)
   
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (nrow(list_suspect_pol[[paste0("Min_obs_", min_obs)]]) == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
   mean_rt <- c()
   mean_mz <- c()
   for (row in 1:nrow(list_suspect_pol[[paste0("Min_obs_", min_obs)]])) {
@@ -1385,10 +1429,12 @@ for (min_obs in 1:10) {
   
   list_suspect_pol[[paste0("Min_obs_", min_obs)]]$mean_rt <- mean_rt
   list_suspect_pol[[paste0("Min_obs_", min_obs)]]$mean_mz <- mean_mz
-  
+  }
+
   print(sp_df %>%
     filter(., adjusted_pvalue_holm < 0.05) %>%
     arrange(comp))
+  print(length(unique(list_suspect_pol[[paste0("Min_obs_", min_obs)]]$comp)))
 }
 
 writexl::write_xlsx(x = list_suspect_pol, path = "Wilcoxon_test_HPLC_by_Suspected_polymer.xlsx")
@@ -1453,24 +1499,30 @@ for (i in 1:length(gc_hplc_list)) {
     list_cat[[min_obs]] <- cat_df %>%
       filter(., adjusted_pvalue_holm < 0.05) %>%
       arrange(adjusted_pvalue_holm)
+    print(paste0("Category ", i, " unique sig is ", length(unique(list_cat[[min_obs]]$comp))))
   }
   
   # Select among all the min obs sub data frame to get the one that has highest number of significant compounds (assuming the one with highest number of significant compounds has nested all the subdf that has less number of compounds)
   sig_comp[[paste0("Grouping_", i)]] <- list_cat[[which.max(lapply(list_cat, nrow))]]
   
-  # Add RT and m.z info to the significant table
-  mean_rt <- c()
-  mean_mz <- c()
-  for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
-    idx <- base::which(gc_hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(gc_hplc_list[[i]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(gc_hplc_list[[i]][idx, ]$m.z))
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (dim(sig_comp[[paste0("Grouping_", i)]])[1] == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
+    mean_rt <- c()
+    mean_mz <- c()
+    for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
+      idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
+      mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
+      mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+    }
+    
+    sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
+    sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
+    
+    print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
   }
-  
-  sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
-  sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
-  
-  print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
 }
 
 writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_COMBINED GC_HPLC_by_Category.xlsx")
@@ -1531,24 +1583,30 @@ for (i in 1:length(gc_list)) {
     list_cat[[min_obs]] <- cat_df %>%
       filter(., adjusted_pvalue_holm < 0.05) %>%
       arrange(adjusted_pvalue_holm)
+    print(paste0("Category ", i, " unique sig is ", length(unique(list_cat[[min_obs]]$comp))))
   }
   
   # Select among all the min obs sub data frame to get the one that has highest number of significant compounds (assuming the one with highest number of significant compounds has nested all the subdf that has less number of compounds)
   sig_comp[[paste0("Grouping_", i)]] <- list_cat[[which.max(lapply(list_cat, nrow))]]
   
-  # Add RT and m.z info to the significant table
-  mean_rt <- c()
-  mean_mz <- c()
-  for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
-    idx <- base::which(gc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(gc_list[[i]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(gc_list[[i]][idx, ]$m.z))
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (dim(sig_comp[[paste0("Grouping_", i)]])[1] == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
+    mean_rt <- c()
+    mean_mz <- c()
+    for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
+      idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
+      mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
+      mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+    }
+    
+    sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
+    sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
+    
+    print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
   }
-  
-  sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
-  sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
-  
-  print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
 }
 
 writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_ATDGCMS_by_Category.xlsx")
@@ -1609,24 +1667,30 @@ for (i in 1:length(hplc_list)) {
     list_cat[[min_obs]] <- cat_df %>%
       filter(., adjusted_pvalue_holm < 0.05) %>%
       arrange(adjusted_pvalue_holm)
+    print(paste0("Category ", i, " unique sig is ", length(unique(list_cat[[min_obs]]$comp))))
   }
   
   # Select among all the min obs sub data frame to get the one that has highest number of significant compounds (assuming the one with highest number of significant compounds has nested all the subdf that has less number of compounds)
   sig_comp[[paste0("Grouping_", i)]] <- list_cat[[which.max(lapply(list_cat, nrow))]]
   
-  # Add RT and m.z info to the significant table
-  mean_rt <- c()
-  mean_mz <- c()
-  for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
-    idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (dim(sig_comp[[paste0("Grouping_", i)]])[1] == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
+    mean_rt <- c()
+    mean_mz <- c()
+    for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
+      idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
+      mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
+      mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+    }
+    
+    sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
+    sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
+    
+    print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
   }
-  
-  sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
-  sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
-  
-  print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
 }
 
 writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_HPLC_by_Category.xlsx")
@@ -1634,6 +1698,7 @@ writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_HPLC_by_Category.xlsx")
 
 #### By Subcategory
 
+Since the subcategory is the same across all 4 different consumer-based perspective groupings, we only need to run one dataframe of the list of df (this principle applies for either gc_hplc_list or gc_list or hplc_list).
 ##### Do we need to change Data processing-Step 4 (Subsetting Non-unique compounds), for ex At step 4, we need to subset compounds that appear in more than 2 categories instead of 2 files? =\> NO!!
 
 ##### COMBINED GC_HPLC
@@ -1643,15 +1708,15 @@ sig_comp <- list()
 
 for (i in 1:length(gc_hplc_list)) {
   list_subcat <- list()
-  for (min_obs in 1:10) {
-    stats <- gc_hplc_list[[i]] %>%
+  stats <- gc_hplc_list[[i]] %>%
       select(NewFile, collapsed_compound, Subcategory, Values) %>%
       # since we have duplicates with different values of the same compound in some samples, we summarize these values by taking the mean of them
       group_by(NewFile, Subcategory, collapsed_compound) %>%
       summarise(across(Values, mean)) %>%
       pivot_wider(names_from = collapsed_compound, values_from = Values) %>%
       column_to_rownames(., var = "NewFile")
-    
+  
+  for (min_obs in 1:10) {
     subcat_df <- data.frame(comp=character(), comparison_pair=character(), pval_wilcox_test=integer(), pval_ks_test=integer())
     # Loop through each collapsed_compound (as columns)
     for (c in 2:ncol(stats)) {
@@ -1690,33 +1755,38 @@ for (i in 1:length(gc_hplc_list)) {
     subcat_df$adjusted_pvalue_holm <- stats::p.adjust(subcat_df$pval_wilcox_test, method = "holm")
     
     list_subcat[[min_obs]] <- subcat_df %>%
-      filter(., adjusted_pvalue_holm < 0.1) %>% # 0.05
+      filter(., adjusted_pvalue_holm < 0.05) %>% # 0.05
       arrange(adjusted_pvalue_holm)
-
+    print(paste0("Category ", i, " unique sig is ", length(unique(list_subcat[[min_obs]]$comp))))
   }
   
   # Select among all the min obs sub data frame to get the one that has highest number of significant compounds (assuming the one with highest number of significant compounds has nested all the subdf that has less number of compounds)
   sig_comp[[paste0("Grouping_", i)]] <- list_subcat[[which.max(lapply(list_subcat, nrow))]]
   
-  # Add RT and m.z info to the significant table
-  mean_rt <- c()
-  mean_mz <- c()
-  for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
-    idx <- base::which(gc_hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(gc_hplc_list[[i]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(gc_hplc_list[[i]][idx, ]$m.z))
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (dim(sig_comp[[paste0("Grouping_", i)]])[1] == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
+    mean_rt <- c()
+    mean_mz <- c()
+    for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
+      idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
+      mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
+      mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+    }
+    
+    sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
+    sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
+    
+    print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
   }
-  
-  sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
-  sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
-  
-  print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
 }
 
 writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_COMBINED GC_HPLC_by_Subcategory.xlsx")
 ```
 
-When we ran a loop to investigate the significant compounds that can be obtained from getting all product_cat that has \> 3 to 6 obs, \> 5 obs gave the highest amount of significant compound. Overall, it is not surprising that most of the significant compounds are pointing towards distinguishing Toys and Food contact materials, which, from the PCA result, are the two most separated clusters. 
+When we ran a loop to investigate the significant compounds that can be obtained from getting all product_cat that has \> 3 to 6 obs, \> 5 obs gave the highest amount of significant compound.
 
 ##### ATDGCMS
 
@@ -1725,15 +1795,15 @@ sig_comp <- list()
 
 for (i in 1:length(gc_list)) {
   list_subcat <- list()
-  for (min_obs in 1:10) {
-    stats <- gc_list[[i]] %>%
+  stats <- gc_list[[i]] %>%
       select(NewFile, collapsed_compound, Subcategory, Values) %>%
       # since we have duplicates with different values of the same compound in some samples, we summarize these values by taking the mean of them
       group_by(NewFile, Subcategory, collapsed_compound) %>%
       summarise(across(Values, mean)) %>%
       pivot_wider(names_from = collapsed_compound, values_from = Values) %>%
       column_to_rownames(., var = "NewFile")
-    
+  
+  for (min_obs in 1:10) {
     subcat_df <- data.frame(comp=character(), comparison_pair=character(), pval_wilcox_test=integer(), pval_ks_test=integer())
     # Loop through each collapsed_compound (as columns)
     for (c in 2:ncol(stats)) {
@@ -1772,27 +1842,32 @@ for (i in 1:length(gc_list)) {
     subcat_df$adjusted_pvalue_holm <- stats::p.adjust(subcat_df$pval_wilcox_test, method = "holm")
     
     list_subcat[[min_obs]] <- subcat_df %>%
-      filter(., adjusted_pvalue_holm < 0.1) %>%
+      filter(., adjusted_pvalue_holm < 0.05) %>%
       arrange(adjusted_pvalue_holm)
-    
+    print(paste0("Category ", i, " unique sig is ", length(unique(list_subcat[[min_obs]]$comp))))
   }
   
   # Select among all the min obs sub data frame to get the one that has highest number of significant compounds (assuming the one with highest number of significant compounds has nested all the subdf that has less number of compounds)
   sig_comp[[paste0("Grouping_", i)]] <- list_subcat[[which.max(lapply(list_subcat, nrow))]]
   
-  # Add RT and m.z info to the significant table
-  mean_rt <- c()
-  mean_mz <- c()
-  for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
-    idx <- base::which(gc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(gc_list[[i]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(gc_list[[i]][idx, ]$m.z))
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (dim(sig_comp[[paste0("Grouping_", i)]])[1] == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
+    mean_rt <- c()
+    mean_mz <- c()
+    for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
+      idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
+      mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
+      mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+    }
+    
+    sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
+    sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
+    
+    print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
   }
-  
-  sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
-  sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
-  
-  print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
 }
 
 writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_ATDGCMS_by_Subcategory.xlsx")
@@ -1805,15 +1880,15 @@ sig_comp <- list()
 
 for (i in 1:length(hplc_list)) {
   list_subcat <- list()
-  for (min_obs in 1:10) {
-    stats <- hplc_list[[i]] %>%
+  stats <- hplc_list[[i]] %>%
       select(NewFile, collapsed_compound, Subcategory, Values) %>%
       # since we have duplicates with different values of the same compound in some samples, we summarize these values by taking the mean of them
       group_by(NewFile, Subcategory, collapsed_compound) %>%
       summarise(across(Values, mean)) %>%
       pivot_wider(names_from = collapsed_compound, values_from = Values) %>%
       column_to_rownames(., var = "NewFile")
-    
+  
+  for (min_obs in 1:10) {
     subcat_df <- data.frame(comp=character(), comparison_pair=character(), pval_wilcox_test=integer(), pval_ks_test=integer())
     # Loop through each collapsed_compound (as columns)
     for (c in 2:ncol(stats)) {
@@ -1852,27 +1927,32 @@ for (i in 1:length(hplc_list)) {
     subcat_df$adjusted_pvalue_holm <- stats::p.adjust(subcat_df$pval_wilcox_test, method = "holm")
     
     list_subcat[[min_obs]] <- subcat_df %>%
-      filter(., adjusted_pvalue_holm < 0.1) %>% # 0.05
+      filter(., adjusted_pvalue_holm < 0.05) %>% # 0.05
       arrange(adjusted_pvalue_holm)
-    
+    print(paste0("Category ", i, " unique sig is ", length(unique(list_subcat[[min_obs]]$comp))))
   }
   
   # Select among all the min obs sub data frame to get the one that has highest number of significant compounds (assuming the one with highest number of significant compounds has nested all the subdf that has less number of compounds)
   sig_comp[[paste0("Grouping_", i)]] <- list_subcat[[which.max(lapply(list_subcat, nrow))]]
   
-  # Add RT and m.z info to the significant table
-  mean_rt <- c()
-  mean_mz <- c()
-  for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
-    idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
-    mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
-    mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+  # Check if the df is empty before create mean_rt and mean_mz column
+  if (dim(sig_comp[[paste0("Grouping_", i)]])[1] == 0) {
+    next
+  } else {
+    # Add RT and m.z info to the significant table
+    mean_rt <- c()
+    mean_mz <- c()
+    for (row in 1:nrow(sig_comp[[paste0("Grouping_", i)]])) {
+      idx <- base::which(hplc_list[[i]]$collapsed_compound == sig_comp[[paste0("Grouping_", i)]][row,]$comp)
+      mean_rt <- c(mean_rt, mean(hplc_list[[i]][idx, ]$RT))
+      mean_mz <- c(mean_mz, mean(hplc_list[[i]][idx, ]$m.z))
+    }
+    
+    sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
+    sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
+    
+    print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
   }
-  
-  sig_comp[[paste0("Grouping_", i)]]$mean_rt <- mean_rt
-  sig_comp[[paste0("Grouping_", i)]]$mean_mz <- mean_mz
-  
-  print(sig_comp[[paste0("Grouping_", i)]] %>% arrange(comp))
 }
 
 writexl::write_xlsx(x = sig_comp, path = "Wilcoxon_test_HPLC_by_Subcategory.xlsx")
